[metadata]
name = terra_workflow_scale_test_tools
version = 0.0.1

[options]
include_package_data = True
packages = find:
package_dir =
install_requires =
    google-auth
    ipywidgets
    matplotlib
    pandas
    psutil
    requests
    schedule
    importlib-metadata; python_version < "3.8"

[options.packages.find]
where =
include = *

[options.package_data]
* = *.sh, *.ipynb